# pyxlimg

./: .readthedocs.yaml  Dockerfile  README.md  conf.py  config.toml  docker-compose.yaml  entrypoint.sh  index.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
docs/: conf.py  genindex.html  index.html  memo.txt  py-modindex.html  pyxlimg.rst  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pyxlimg.doctree
docs/_sources/: modules.rst.txt
docs/githubdocs/: .buildinfo  modules.html  pyxlimg.html
docs/githubdocs/.doctrees/: environment.pickle
docs_src/: index.rst
docs_src/_build/.doctrees/: art_of_community.doctree  environment.pickle  expert_python.doctree  modules.doctree
docs_src/_build/_sources/: art_of_community.rst.txt
docs_src/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  tests.doctree
docs_src/_build/html/: art_of_community.html  expert_python.html  objects.inv  searchindex.js  tests.html
docs_src/_build/html/.doctrees/: environment.pickle  index.doctree  pyxlimg.doctree
docs_src/_build/html/_sources/: tests.rst.txt
pyxlimg/: xlimg.py
tests/: test_xlimg.py
tests/testdata/: TestBook.xlsx
