[tool.poetry]
name = "pyxlimg"
version = "0.1.1"
description = "Image Extractor for XLSX files"
authors = ["ShortArrow <bamboogeneral@live.jp>"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/shortarrow/pyxlimg"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pytest-watch = "^4.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
