[metadata]
# replace with your username:
name = pyxlimg
version = 0.0.1
author = shortarrow
author_email = bamboogeneral@shortarrow.jp
description = Image Extractor for XLSX files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShortArrow/pyxlimg
project_urls = https://github.com/ShortArrow/pyxlimg
    Bug Tracker = https://github.com/ShortArrow/pyxlimg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
packages = find:
    Pillow
python_requires = >=3.8